// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should support the offline status 1`] = `
<styled.svg
  viewBox="0 0 20 20"
>
  <styled.circle
    cx="10"
    cy="10"
    fill="none"
    fillRule="evenodd"
    r="4"
    status="online"
    strokeWidth="2"
  />
</styled.svg>
`;

exports[`should support the online status 1`] = `
<styled.svg
  viewBox="0 0 20 20"
>
  <styled.circle
    cx="10"
    cy="10"
    fill="none"
    fillRule="evenodd"
    r="4"
    status="offline"
    strokeWidth="2"
  />
</styled.svg>
`;
